[gd_scene load_steps=2 format=3 uid="uid://cxf0cgy7wc4hu"]

[ext_resource type="Script" path="res://game.gd" id="1_kxsh1"]

[node name="Game" type="Node2D"]
script = ExtResource("1_kxsh1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.5
offset_right = 47.5
offset_bottom = 89.0
grow_horizontal = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Game Room"

[node name="PeerID" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="PlayerInfo" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="StartGame" type="Button" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Start Game"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -40.0
offset_right = 37.5
grow_horizontal = 2
grow_vertical = 0

[node name="Chat" type="TextEdit" parent="CanvasLayer/HBoxContainer"]
custom_minimum_size = Vector2(600, 2.08165e-12)
layout_mode = 2

[node name="Submit" type="Button" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Submit" to="." method="_on_submit_pressed"]
